增加detekt的扫描