@@ -1,6 +1,6 @@
 /*
  * SonarLint for IntelliJ IDEA
- * Copyright (C) 2015-2022 SonarSource
+ * Copyright (C) 2015-2021 SonarSource
  * sonarlint@sonarsource.com
  *
  * This program is free software; you can redistribute it and/or
@@ -23,6 +23,7 @@ import com.intellij.ide.BrowserUtil;
 import com.intellij.ide.wizard.AbstractWizardEx;
 import com.intellij.ide.wizard.AbstractWizardStepEx;
 import java.util.Collections;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
 import org.sonarlint.intellij.config.global.ServerConnection;
@@ -36,43 +37,43 @@ public class ServerConnectionWizard {
   }
 
   public static ServerConnectionWizard forNewConnection(Set<String> existingNames) {
-    var wizard = new ServerConnectionWizard(new WizardModel());
-    var steps = createSteps(wizard.model, false, existingNames);
+    ServerConnectionWizard wizard = new ServerConnectionWizard(new WizardModel());
+    List<AbstractWizardStepEx> steps = createSteps(wizard.model, false, existingNames);
     wizard.wizardEx = new ServerConnectionWizardEx(steps, "New Connection");
     return wizard;
   }
 
   public static ServerConnectionWizard forNewConnection(ServerConnection prefilledConnection, Set<String> existingNames) {
-    var wizard = new ServerConnectionWizard(new WizardModel(prefilledConnection));
-    var steps = createSteps(wizard.model, false, existingNames);
+    ServerConnectionWizard wizard = new ServerConnectionWizard(new WizardModel(prefilledConnection));
+    List<AbstractWizardStepEx> steps = createSteps(wizard.model, false, existingNames);
     wizard.wizardEx = new ServerConnectionWizardEx(steps, "New Connection");
     return wizard;
   }
 
   public static ServerConnectionWizard forConnectionEdition(ServerConnection connectionToEdit) {
-    var wizard = new ServerConnectionWizard(new WizardModel(connectionToEdit));
-    var steps = createSteps(wizard.model, true, Collections.emptySet());
+    ServerConnectionWizard wizard = new ServerConnectionWizard(new WizardModel(connectionToEdit));
+    List<AbstractWizardStepEx> steps = createSteps(wizard.model, true, Collections.emptySet());
     wizard.wizardEx = new ServerConnectionWizardEx(steps, "Edit Connection");
     return wizard;
   }
 
   public static ServerConnectionWizard forNotificationsEdition(ServerConnection connectionToEdit) {
-    var wizard = new ServerConnectionWizard(new WizardModel(connectionToEdit));
+    ServerConnectionWizard wizard = new ServerConnectionWizard(new WizardModel(connectionToEdit));
     // Assume notifications are supported, if not, why would we want to edit the setting
     wizard.model.setNotificationsSupported(true);
-    var steps = List.of(new NotificationsStep(wizard.model, true));
+    List<AbstractWizardStepEx> steps = Collections.singletonList(new NotificationsStep(wizard.model, true));
     wizard.wizardEx = new ServerConnectionWizardEx(steps, "Edit Connection");
     return wizard;
   }
 
   private static List<AbstractWizardStepEx> createSteps(WizardModel model, boolean editing, Set<String> existingNames) {
-    return List.of(
-      new ServerStep(model, editing, existingNames),
-      new AuthStep(model),
-      new OrganizationStep(model),
-      new NotificationsStep(model, false),
-      new ConfirmStep(model, editing)
-    );
+    List<AbstractWizardStepEx> steps = new LinkedList<>();
+    steps.add(new ServerStep(model, editing, existingNames));
+    steps.add(new AuthStep(model));
+    steps.add(new OrganizationStep(model));
+    steps.add(new NotificationsStep(model, false));
+    steps.add(new ConfirmStep(model, editing));
+    return steps;
   }
 
   public boolean showAndGet() {
@@ -84,7 +85,7 @@ public class ServerConnectionWizard {
   }
 
   private static class ServerConnectionWizardEx extends AbstractWizardEx {
-    public ServerConnectionWizardEx(List<? extends AbstractWizardStepEx> steps, String title) {
+    public ServerConnectionWizardEx(List<AbstractWizardStepEx> steps, String title) {
       super(title, null, steps);
       this.setHorizontalStretch(1.25f);
       this.setVerticalStretch(1.25f);
