@@ -1,6 +1,6 @@
 /*
  * SonarLint for IntelliJ IDEA
- * Copyright (C) 2015-2022 SonarSource
+ * Copyright (C) 2015-2021 SonarSource
  * sonarlint@sonarsource.com
  *
  * This program is free software; you can redistribute it and/or
@@ -28,12 +28,13 @@ import com.intellij.util.Consumer;
 import java.awt.Component;
 import java.io.BufferedReader;
 import java.io.StringReader;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.stream.Collectors;
+
 import org.apache.commons.lang.StringUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -69,10 +70,10 @@ public class BlameSonarSource extends ErrorReportSubmitter {
   }
 
   @Override
-  public boolean submit(@NotNull IdeaLoggingEvent[] events,
-    @Nullable String additionalInfo,
-    @NotNull Component parentComponent,
-    @NotNull Consumer<SubmittedReportInfo> consumer) {
+  public boolean submit(IdeaLoggingEvent @NotNull [] events,
+                        @Nullable String additionalInfo,
+                        @NotNull Component parentComponent,
+                        @NotNull Consumer<? super SubmittedReportInfo> consumer) {
     String body = buildBody(events, additionalInfo);
     BrowserUtil.browse(getReportWithBodyUrl(body));
     consumer.consume(new SubmittedReportInfo(COMMUNITY_FAULT_CATEGORY_URL, "community support thread", SubmittedReportInfo.SubmissionStatus.NEW_ISSUE));
@@ -81,7 +82,7 @@ public class BlameSonarSource extends ErrorReportSubmitter {
 
   @NotNull
   static String buildBody(@NotNull IdeaLoggingEvent @NotNull [] events, @Nullable String additionalInfo) {
-    var body = new StringBuilder();
+    StringBuilder body = new StringBuilder();
     body.append("Environment:\n");
     body.append("* Java: ").append(System.getProperty("java.vendor")).append(" ").append(System.getProperty("java.version")).append("\n");
     body.append("* OS: ").append(System.getProperty("os.name")).append(" ").append(System.getProperty("os.arch")).append("\n");
@@ -92,12 +93,12 @@ public class BlameSonarSource extends ErrorReportSubmitter {
       body.append(additionalInfo);
       body.append("\n");
     }
-    for (var ideaLoggingEvent : events) {
-      final var message = ideaLoggingEvent.getMessage();
+    for (IdeaLoggingEvent ideaLoggingEvent : events) {
+      final String message = ideaLoggingEvent.getMessage();
       if (StringUtils.isNotBlank(message)) {
         body.append(message).append("\n");
       }
-      final var throwableText = ideaLoggingEvent.getThrowableText();
+      final String throwableText = ideaLoggingEvent.getThrowableText();
       if (StringUtils.isNotBlank(throwableText)) {
         body.append("\n```\n");
         body.append(abbreviate(throwableText));
@@ -109,9 +110,9 @@ public class BlameSonarSource extends ErrorReportSubmitter {
 
   static String abbreviate(String throwableText) {
     return new BufferedReader(new StringReader(throwableText)).lines()
-      .map(line -> {
-        var abbreviated = line;
-        for (var entry : packageAbbreviation.entrySet()) {
+      .map(l -> {
+        String abbreviated = l;
+        for (Map.Entry<String, String> entry : packageAbbreviation.entrySet()) {
           abbreviated = StringUtils.replace(abbreviated, entry.getKey(), entry.getValue());
         }
         return abbreviated;
@@ -120,24 +121,28 @@ public class BlameSonarSource extends ErrorReportSubmitter {
   }
 
   String getReportWithBodyUrl(String description) {
-    final var urlStart = COMMUNITY_NEW_TOPIC_URL + "&body=";
-    final var charsLeft = MAX_URI_LENGTH - urlStart.length();
+    final String urlStart = COMMUNITY_NEW_TOPIC_URL + "&body=";
+    final int charsLeft = MAX_URI_LENGTH - urlStart.length();
 
     return urlStart + getBoundedEncodedString(description, charsLeft);
   }
 
   String getBoundedEncodedString(String description, int maxLen) {
-    var encoded = URLEncoder.encode(description, StandardCharsets.UTF_8);
-    while (encoded.length() > maxLen) {
-      int lastNewline = description.lastIndexOf('\n');
-      if (lastNewline == -1) {
-        return "";
+    try {
+      String encoded = URLEncoder.encode(description, "UTF-8");
+      while (encoded.length() > maxLen) {
+        int lastNewline = description.lastIndexOf('\n');
+        if (lastNewline == -1) {
+          return "";
+        }
+        description = description.substring(0, lastNewline);
+        encoded = URLEncoder.encode(description, "UTF-8");
       }
-      description = description.substring(0, lastNewline);
-      encoded = URLEncoder.encode(description, StandardCharsets.UTF_8);
-    }
 
-    return encoded;
+      return encoded;
+    } catch (UnsupportedEncodingException e) {
+      return "";
+    }
 
   }
 }
